Fix hero spacing

--- a/src/components/hero/Hero.scss
+++ b/src/components/hero/Hero.scss
@@ -10,8 +10,7 @@
 */
 
 .hero {
-  min-height: 90vh;
-  padding: 4.8rem 0 9.6rem 0;
+  padding: 9.6rem 0 12rem 0;
   background: #e03131;
 
   .heading-primary {
@@ -90,6 +89,16 @@
     font-size: 1.8rem;
     font-weight: 400;
     color: #fff;
+    cursor: pointer;
+  }
+
+  &__link:hover {
+    color: #eee;
+  }
+
+  .btn {
+    padding: 1.2rem 2.4rem;
+    font-size: 1.8rem;
   }
 
   .contact {
